src/test/minijava/success/PrivateAttributeAccess.mjava
class A {
    // public int i = 1; // illégal d'initialiser un attribut d'instance
    public int i;
}

public class PrivateAttributeAccess {

    public static void main(String[] args) {

    }
}